--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,29 @@ body {
   background-color: rgb(10, 10, 10);
   color: white;
 }
+
+.fixed-bottom-right {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.navbar {
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: blue;
+  color: white;
+  padding: 0.5rem 1rem;
+}
+
+.navbar-container {
+  display: flex;
+  gap: 1rem;
+}
+
+.navbar-link {
+  color: white;
+  font-weight: bold;
+}
