--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,3 +28,11 @@ body {
   color: white;
   font-weight: bold;
 }
+
+.icon {
+  width: 75px;
+  height: 75px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-right: 20px;
+}
